@@ -1,5 +1,10 @@
 2007-12-10  Lillian Angel  <langel@redhat.com>
 
+	* Makefile.am: Changed tag to use OPENJDK_VERSION var.
+	* Makefile.in: Likewise.
+
+2007-12-10  Lillian Angel  <langel@redhat.com>
+
 	* Makefile.am: Added --with-openjdk-src-zip support back in. Also,
 	openjdk is cloned based on release tag.
 	* Makefile.in: Regenerate.
